# BSc-THESIS

./: .gitignore  README.md  main.py  pyproject.toml
data/NU/Downstairs/: Accelerometer.csv  AccelerometerUncalibrated.csv  Barometer.csv  Compass.csv  Gravity.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  Location.csv  Magnetometer.csv  MagnetometerUncalibrated.csv  Metadata.csv  Network.csv  Orientation.csv  Pedometer.csv  TotalAcceleration.csv  WatchAccelerometer.csv  WatchBarometer.csv  WatchGravity.csv  WatchGyroscope.csv  WatchMagnetometer.csv  WatchOrientation.csv  WatchTotalAcceleration.csv  WiFi.csv
data/NU/Upstairs/: Accelerometer.csv  AccelerometerUncalibrated.csv  Barometer.csv  Compass.csv  Gravity.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  Location.csv  Magnetometer.csv  MagnetometerUncalibrated.csv  Metadata.csv  Network.csv  Orientation.csv  Pedometer.csv  TotalAcceleration.csv  WatchAccelerometer.csv  (+7 more)
poser-test-drive/: README.md  final-sensor.ipynb  mobileposer_runner.py  render_pose_video.py  visualize_sensor.py
sensor-test-drive/: README.md  data-analysis-stairs.ipynb  data-analysis-walking.ipynb  data-structure-exploration.ipynb
sensor-test-drive/.ipynb_checkpoints/: data-analysis-walking-checkpoint.ipynb
trajectory/: README.md  README_walking_notes.md  generate_plots.py  make_floorplan_overlay.py  pdr_NU_walking.ipynb  pdr_test_drive.ipynb  test-script.py
trajectory/output/: summary.csv  summary.md
trajectory/pdr/: __init__.py  altitude.py  heading.py  io.py  mobileposer.py  pdr.py  pipeline.py  preprocess.py  steps.py  viz.py
(+154 files in other folders)
