[project]
name = "bsc-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chumpy",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=7.2.0",
    "lightning>=2.6.5",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "tabulate>=0.10.0",
    "torch>=2.12.1",
]

[tool.uv.extra-build-dependencies]
chumpy = ["pip"]
